remove MaxPermSize to make sure 17 still compiles