@@ -70,7 +70,7 @@ buildRelease=true
 kotlin.code.style=official
 asfNexusUsername=none
 asfNexusPassword=
-org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=1g \
+org.gradle.jvmargs=-Xmx2048m \
   --add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED \
   --add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED \
   --add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED \
